ingress/nginx-ingress-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx-ingress
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    name: http
  type: LoadBalancer
